# minitorch

./: .gitignore  README.md  pyproject.toml
examples/: linear_regression.py  mlp.py  mnist.py  test_linear_regression.py
src/minitorch/: linear.py  module.py  operations.py  parameter.py  tensor.py  utils.py
tests/: test_module.py  test_tensor.py
