[project]
name = "minitorch"
version = "0.1.0"
description = "An implementation of torch based solely on numpy"
authors = [
    {name = "amaudruz",email = "amaudruz.louis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)"
]
packages = [{include = "minitorch", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
black = "^25.1.0"
torch = "^2.6.0"
pytest = "^8.3.5"
datasets = "^3.5.0"
pynvim = "^0.5.2"
jupyter-client = "^8.6.3"
ipykernel = "^6.29.5"

[tool.poe.tasks.test]
help = "Run pytest on the code base"
cmd  = "pytest tests"

###### Lint, format, style, types

[tool.poe.tasks.lint]
help = "Run linting tools on the code base"
cmd  = "ruff check src tests"

[tool.poe.tasks.format-black]
help = "Format code with black"
cmd  = "black src tests"

[tool.poe.tasks.format-ruff]
help = "Format code with ruff"
cmd  = "ruff format src tests"

[tool.poe.tasks.format]
help     = "Run code formating tools"
sequence = ["format-black", "format-ruff"]

